@@ -24,6 +24,7 @@ Attachments are now processed in the order they were attached.
 == CHANGELOG ==
 = 1.5.16 (future) =
 * Fixed date detection bug in forwarded messages
+* Possible fix for blank screen issue (flush buffers rather than check for sent headers)
 
 = 1.5.15 (2013.07.01) =
 * Added message warning that filter 'postie_post' has been deprecated.
